--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.30)
 project(server VERSION 0.0.0 LANGUAGES C CXX)
 
+set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
+
 add_executable(server server.cpp)
 add_executable(client client.cpp)
 
