--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,5 @@ add_executable(chat-server src/main.cpp
 target_include_directories(chat-server PRIVATE include)
 
 if (WIN32)
-    target_link_libraries(server PRIVATE ws2_32)
-    target_link_libraries(client PRIVATE ws2_32)
+    target_link_libraries(chat-server PRIVATE ws2_32)
 endif()
